--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,466 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="./images/favicon.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <nav class="nav page__nav" id="nav">
+      <ul class="nav__list">
+        <li class="nav__logo">
+          <a href="#" class="namu nav__logo-link">
+            NA
+            <br>
+            MU
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#gallery" class="nav__link">
+            Галерея
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#events" class="nav__link">
+            Виставка та події
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#lecture" class="nav__link">
+            Відвідування
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#subscribe" class="nav__link">
+            Стати нашим другом
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#subscribe" class="nav__link">
+            Про нас
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#shop" class="nav__link">
+            Магазин
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#subscribe" class="nav__link">
+            Блог
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#contacts" class="nav__link">
+            Контакти
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <header class="page__content header" id="header">
+      <a href="#nav" class="header__menu">
+        <img
+        src="./images/burger.svg"
+        alt="menu"
+        >
+      </a>
+      <a href="#" class="namu header__namu">
+        NA
+        <br>
+        MU
+      </a>
+    </header>
+
+    <main>
+      <section class="page__art-museum art-museum">
+        <div class="art-museum__photo">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="./images/artMuseum/museum4.png">
+            <source media="(min-width: 1025px)" srcset="./images/artMuseum/museum3.png">
+            <source media="(min-width: 768px)" srcset="./images/artMuseum/museum2.png">
+            <img
+              src="./images/artMuseum/museum1.png"
+              alt="museum"
+              class="art-museum__img"
+            >
+          </picture>
+        </div>
+
+        <h1 class="art-museum__title">
+          Худож<span class="art-museum__title-special">ній</span>
+          <br>
+          музей
+        </h1>
+
+        <a href="#events" class="page__content art-museum-button art-museum__button">
+          <div class="art-museum-button__text">
+            квитки
+          </div>
+
+          <div class="art-museum-button__arrow">
+            <img src="./images/arrow.svg" alt="arrow">
+          </div>
+        </a>
+
+        <a href="#events" class="art-museum__event">
+          Події
+        </a>
+      </section>
+
+      <section
+        class="page__content actual-events"
+        id="events"
+      >
+        <h2 class="actual-events__title">Актуальні події</h2>
+        <div class="actual-events__event">
+          <div class="grid">
+            <div class="grid__item--1-7">
+              <picture>
+                <source media="(min-width: 1025px)" srcset="./images/actual-events1/actual-events3.png">
+                <source media="(min-width: 768px)" srcset="./images/actual-events1/actual-events2.png">
+                <img
+                  src="./images/actual-events1/actual-events1.png"
+                  alt="event"
+                  class="actual-events__img"
+                >
+              </picture>
+            </div>
+
+            <div class="grid__item--9-12 events-description">
+              <div class="events-description__date">
+                <span class="events-description__name">ВИСТАВКА</span>
+                <span class="events-description__time">26.08-29.11.2019</span>
+              </div>
+              <div class="events-description__cover">
+                <div class="events-description__cover-name">
+                  Йду і повертаюсь
+                </div>
+                <div class="events-description__cover-text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="actual-events__event">
+          <div class="grid">
+            <div class="grid__item--6-12">
+              <picture>
+                <source media="(min-width: 1025px)" srcset="./images/actual-events2/actual-events3.png">
+                <source media="(min-width: 768px)" srcset="./images/actual-events2/actual-events2.png">
+                <img
+                  src="./images/actual-events2/actual-events1.png"
+                  alt="event"
+                  class="actual-events__img"
+                >
+              </picture>
+            </div>
+
+            <div class="grid__item--1-4 grid__item--row events-description">
+              <div class="events-description__date">
+                <span class="events-description__name">ВИСТАВКА</span>
+                <span class="events-description__time">26.08-29.11.2019</span>
+              </div>
+              <div class="events-description__cover">
+                <div class="events-description__cover-name">
+                  І спогади і мрії
+                </div>
+                <div class="events-description__cover-text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__content lecture" id="lecture">
+        <picture>
+          <source media="(min-width: 1025px)" srcset="./images/lecture/lecture3.png">
+          <source media="(min-width: 768px)" srcset="./images/lecture/lecture2.png">
+          <img
+            src="./images/lecture/lecture1.png"
+            alt="lecture"
+            class="lecture__img"
+          >
+        </picture>
+
+        <div class="lecture__container">
+          <div class="lecture__date">
+            <span class="lecture__name">
+              ЛЕКЦІЯ
+            </span>
+            <span class="lecture__time">
+              26/08/2019 - 11:00
+            </span>
+          </div>
+
+          <div class="lecture__cover-name">
+            Від класицизму до романтизму
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="page__content gallery page__gallery"
+        id="gallery"
+      >
+        <h2>Галерея</h2>
+
+        <div class="grid gallery__photos">
+          <div class="grid__item--1-4 gallery__photo">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/gallery/gallery2.png">
+              <img
+                src="./images/gallery/gallery1.png"
+                alt="gallery photo"
+                class="gallery__img"
+              >
+            </picture>
+          </div>
+          <div class="gallery__photo gallery__photo--small-screen">
+            <img
+              src="./images/gallery/smallScreen.png"
+              alt="gallery photo"
+              class="gallery__img"
+            >
+          </div>
+          <div class="grid__item--5-12 gallery__photo">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-1.png">
+              <img
+                src="./images/gallery/gallery1-1.png"
+                alt="gallery photo"
+                class="gallery__img"
+              >
+            </picture>
+          </div>
+          <div class="grid__item--1-8 gallery__photo">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-2.png">
+              <img
+                src="./images/gallery/gallery1-2.png"
+                alt="gallery photo"
+                class="gallery__img"
+              >
+            </picture>
+          </div>
+          <div class="grid__item--9-12 gallery__photo">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-3.png">
+              <img
+                src="./images/gallery/gallery1-3.png"
+                alt="gallery photo"
+                class="gallery__img"
+              >
+            </picture>
+          </div>
+          <div class="gallery__photo gallery__photo--small-screen">
+            <img
+              src="./images/gallery/smallScreen1.png"
+              alt="gallery photo"
+              class="gallery__img"
+            >
+          </div>
+        </div>
+      </section>
+
+      <section class="page__subscribe subscribe" id="subscribe">
+        <div class="subscribe__block">
+          <div class="subscribe__title">Підписка</div>
+          <div class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <form
+            action="#"
+            autocomplete="off"
+            class="subscribe__form"
+          >
+            <input
+              name = "email"
+              type="email"
+              class="subscribe__input"
+              placeholder="E-mail"
+              required
+            >
+            <button class="subscribe__button">
+              <img src="./images/button-arrow.svg" alt="button">
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer page__content grid grid--footer">
+      <div
+        class="footer__soc-media grid__item grid__item--1-1 grid__item--phone-1-2 grid__item--tablet-1-1"
+        id="blog"
+      >
+        <div class="namu">
+          NA
+          <br>
+          MU
+        </div>
+
+        <div class="footer__soc-media-img">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            rel="noopener"
+            target="_blank"
+            class="footer__facebook"
+          >
+          </a>
+
+          <a
+            href="https://www.instagram.com/namu.museum/?hl=ru"
+            rel="noopener"
+            target="_blank"
+            class="footer__instagram"
+          >
+          </a>
+        </div>
+      </div>
+
+      <div
+        class="footer__shedule grid__item grid__item--3-4 grid__item--tablet-2-3"
+        id="attendance"
+      >
+        <div class="footer__title"> Графік роботи </div>
+        <ul class="footer__working-days">
+          <li class="footer__working-day">
+            <span class="footer__important">12:00 — 20:00</span> середа
+          </li>
+          <li class="footer__working-day">
+            <span class="footer__important">12:00 — 20:00 </span>четвер
+          </li>
+          <li class="footer__working-day">
+            <span class="footer__important">12:00 — 20:00 </span>п’ятниця
+          </li>
+          <li class="footer__working-day">
+            <span class="footer__important">11:00 — 19:00 </span>субота
+          </li>
+          <li class="footer__working-day">
+            <span class="footer__important">11:00 — 19:00 </span>неділя
+          </li>
+        </ul>
+        Вихідні понеділок, вівторок
+        <br>
+        Каса припиняє роботу за 1 годину
+        до закриття музею
+      </div>
+
+      <div
+        class="grid__item grid__item--5-6 grid__item--tablet-4-5"
+        id="contacts"
+      >
+        <div class="footer__title">
+          Контакти
+        </div>
+
+        <div>
+          <a
+            href="https://goo.gl/maps/P1XdMGSBmhy2dxAz8"
+            rel="noopener"
+            target="_blank"
+            class="footer__contacts-link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <br>
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="footer__contacts-link"
+          >
+            тел. +38 (044) 278-13-57
+          </a>
+          <br>
+          <a
+            href="tel:+38 (044) 278-74-54"
+            class="footer__contacts-link"
+          >
+            факс +38 (044) 278-74-54
+          </a>
+          <br>
+          <a
+            href="mailto:info@namu.kiev.ua"
+            rel="noopener"
+            target="_blank"
+            class="footer__contacts-link"
+          >
+            e-mail: info@namu.kiev.ua
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__line grid__item grid__item--phone-1-2 grid__item--tablet-2-5">
+        <a href="#header" class="footer__go-home"></a>
+      </div>
+
+      <div class="grid__item grid__item--8-9 grid__item--tablet-2-3">
+        <ul class="footer__nav-items">
+          <li class="footer__nav-item">
+            <a href="#gallery" class="footer__nav-link">
+              Галерея
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#events" class="footer__nav-link">
+              Виставка та події
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#lecture" class="footer__nav-link">
+              Відвідування
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#subscribe" class="footer__nav-link">
+              Стати нашим другом
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="grid__item grid__item--10-10 grid__item--tablet-4-4">
+        <ul class="footer__nav-items">
+          <li class="footer__nav-item">
+            <a href="#subscribe" class="footer__nav-link">
+              Про нас
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#shop" class="footer__nav-link">
+              Магазин
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#subscribe" class="footer__nav-link">
+              Блог
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#contacts" class="footer__nav-link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
+
