--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       crossorigin=""
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,500;0,600;0,700;1,400&family=Montserrat:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+    <script src="./scripts/main.js"></script>
   </head>
   <body class="body page__body">
     <header class="header body__header" id="home">
@@ -34,6 +35,7 @@
             MA
           </a>
         </div>
+
       </div>
 
       <h1 class="title header__title">
@@ -55,35 +57,177 @@
     </header>
 
     <div class="menu page__menu" id="menu">
-      <nav>
+      <div class="empty-container">
+        <a href="#home" class="menu__close-link">X</a>
+      </div>
+
+      <div class="menu__logo">
+        <a href="#home" class="logo">
+          NA
+          <br>
+          MA
+        </a>
+      </div>
+
+      <nav class="nav menu__nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#home" class="nav__link">
               Головна
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#actual-events" class="nav__link">
               Актуальні події
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#gallery" class="nav__link">
               Галерея
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#subscribe" class="nav__link">
               Підписка
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#contacts" class="nav__link">
               Контакти
             </a>
           </li>
         </ul>
       </nav>
     </div>
+
+    <main class="main">
+      <section class="actual-events main__actual-events" id="actual-events">
+        <h2 class="actual-events__title">
+          Актуальні події
+        </h2>
+
+        <div class="show grid">
+          <img
+            srcset="./images/show/show1-mobile.png 280w,
+                    ./images/show/show1-laptop.png 700w,
+                    ./images/show/show1-desktop.png 670w
+                  "
+            sizes="(max-width: 768px) 280px,
+                    (max-width: 1024px) 700px,
+                    670px
+                  "
+            src="./images/show/show1-mobile.png"
+            alt="Йду і повертаюсь"
+            class="show__img grid__item--onLaptop-1-6 grid__item--onDesktop-1-7"
+          >
+
+          <div class="container grid__item--onLaptop-1-4 grid__item--onDesktop-9-12">
+            <div class="show__event">
+              <span class="show__event-type">
+                Виставка
+              </span>
+              <span class="show__event-date">
+                26.08-29.11.2019
+              </span>
+            </div>
+
+            <h3 class="show__title">
+              Йду і повертаюсь
+            </h3>
+
+            <p class="show__info">
+              Національний Художній Музей України
+              презентує унікальну частину колекції
+              Градобанку - українське
+              мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="show grid show--flex-reverse">
+          <img
+            srcset="./images/show/show2-mobile.png 280w,
+                    ./images/show/show2-laptop.png 700w,
+                    ./images/show/show2-desktop.png 670w
+                  "
+            sizes="(max-width: 768px) 280px,
+                    (max-width: 1024px) 700px,
+                    670px
+                  "
+            src="./images/show/show2-mobile.png"
+            alt="І спогади і мрії"
+            class="show__img grid__item--onLaptop-1-6"
+          >
+
+          <div class="container grid__item--onLaptop-1-4">
+            <div class="show__event">
+              <span class="show__event-type">
+                Виставка
+              </span>
+              <span class="show__event-date">
+                26.08-29.11.2019
+              </span>
+            </div>
+
+            <h3 class="show__title">
+              І спогади і мрії
+            </h3>
+
+            <p class="show__info">
+              Національний художній музей
+              України до 100 річчя від дня народження
+              видатної української художниці  Тетяни Яблонської
+              відкриває ретроспективну
+              ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+
+        <div class="lecture">
+          <img
+            srcset="./images/show/lecture1-mobile.png 280w,
+                    ./images/show/lecture1-laptop.png 700w,
+                    ./images/show/lecture1-desktop.png 670w
+                  "
+            sizes="(max-width: 768px) 280px,
+                    (max-width: 1024px) 700px,
+                    670px
+                  "
+            src="./images/show/lecture1-mobile.png"
+            alt="Від класицизму до романтизму"
+            class="lecture__img"
+          >
+
+          <div class="lecture__title-date">
+            <div class="lecture__event">
+              <span class="lecture__type">ЛЕКЦІЯ</span>
+              <span class="lecture__date">26/08/2019 - 11:00</span>
+            </div>
+
+            <h3 class="lecture__title">
+              Від класицизму до
+              <br>
+              романтизму
+            </h3>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="section" id="gallery">
+        gallery
+      </section>
+
+      <section class="section" id="subscribe">
+        subscribe
+      </section>
+
+      <section class="section" id="contacts">
+        contacts
+      </section>
+      <footer>
+        footer
+      </footer>
+    </main>
   </body>
 </html>
