--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title class="page__subtitle">Художній музей</title>
+    <link rel="icon" href="./images/NA MU.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header hidden class="page__header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a href="#" class="top-bar__menu menu ">
+              <img src="./images/Vector.svg" alt="menu">
+            </a>
+
+            <a href="#" class="top-bar__logo logo">
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+
+          <div class="grid grid--tablet">
+            <div class="grid__item grid__item--tablet-3-6 grid__item--desktop-6-12">
+              <div
+                class="header__photo"
+                alt="Фасад національного художнього музею"
+              >
+                <img
+                  src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+                  alt="Фасад національного художнього музею"
+                  class="header__image"
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="grid grid--tablet">
+            <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-3-7">
+              <h1 class="header__title title">
+                Худож<span class="header__title title-trans">ній</span>
+                <br>
+                музей
+              </h1>
+            </div>
+
+            <div class="grid__item grid__item--tablet-1-3 grid__item--desktop-3-7">
+              <a href="#" class="header__button button">
+                <div class="button__field">Квитки</div>
+                <div class="button__icon">
+                  <img src="./images/button-icon.svg" alt="link to tickets">
+                </div>
+              </a>
+            </div>
+          </div>
+
+
+          <div class="left-side-mark">
+            <div class="left-side-mark__line"></div>
+            <div class="left-side-mark__text">Події</div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="body__content">
+      <section class="page__section">
+        <div class="container">
+          <h2 class="section__title">Актуальні події</h2>
+
+          <div class="section__event event">
+            <div class="grid grid--tablet">
+              <div class="grid__item grid__item--desktop-1-7 grid__item--tablet-1-6">
+                <div class="event__photo-container">
+                  <img
+                    src="./images/Rectangle 2.1.png"
+                    alt="Унікальна частина колекції Градобанку"
+                    class="event__photo"
+                  >
+                </div>
+              </div>
+
+              <div class="grid__item grid__item--desktop-9-12 grid__item--tablet-1-4">
+                <div class="event__info">
+                  <div class="event__type">Виставка</div>
+
+                  <div class="event__date">26.08-29.11.2019</div>
+                </div>
+
+                <h3 class="event__title">Йду і повертаюсь</h3>
+
+                <div class="event__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
