--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,268 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <a href="#" class="header__menu-opener">
+
+      </a>
+
+      <div class="header__logo">
+        Na
+        <br>
+        mu
+      </div>
+
+      <img
+        src="./images/header.jpg"
+        alt="NAMU photo"
+        class="header__photo"
+      >
+
+      <h1 class="header__title">
+        Художній музей
+      </h1>
+
+      <div class="button-tickets">
+        <div class="button-tickets__text">
+          Квитки
+        </div>
+        <a href="#" class="button-tickets__buy"></a>
+      </div>
+    </header>
+
+    <section class="current-events" id="current-events">
+      <div class="container">
+        <h2 class="current-events__title">
+          Актуальні події
+        </h2>
+
+        <div class="exhibitions">
+          <div class="exhibitions__photo-container">
+            <!-- <img
+              src="images/exhibitions__photo1.jpg"
+              alt="photo 1"
+              class="exhibitions__photo"
+            > -->
+          </div>
+
+          <div class="exhibitions__type-n-date">
+            <div class="exhibitions__type">
+              Виставка
+            </div>
+
+            <div class="exhibitions__date">
+              26.08-29.11.2019
+            </div>
+          </div>
+
+          <div class="exhibitions__name">
+            Йду і повертаюсь
+          </div>
+
+          <div class="exhibitions__about">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </div>
+
+
+          <div class="exhibitions__photo-container">
+            <img
+              src="images/exhibitions__photo2.jpg"
+              alt="photo 2"
+              class="exhibitions__photo"
+            >
+          </div>
+
+          <div class="exhibitions__type-n-date">
+            <div class="exhibitions__type">
+              Виставка
+            </div>
+
+            <div class="exhibitions__date">
+              26.08-29.11.2019
+            </div>
+          </div>
+
+          <div class="exhibitions__name">
+            І спогади і мрії
+          </div>
+
+          <div class="exhibitions__about">
+          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </div>
+        </div>
+
+        <div class="lections">
+          <div class="lections__photo-container">
+            <img
+              src="images/lections__photo1.jpg"
+              alt="photo 1"
+              class="lections__photo"
+            >
+          </div>
+
+          <div class="lections__info-container">
+            <div class="lections__type-n-date">
+              <div class="lections__type">
+                Лекція
+              </div>
+
+              <div class="lections__date">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+
+            <div class="lections__theme">
+              Від класицизму до романтизму
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery" id="gallery">
+      <div class="container">
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
+
+        <div class="photo-collection">
+          <div class="photo-collection__photo-container">
+            <img
+            src="images/photo-collection__photo1.jpg"
+            alt="photo 1"
+            class="photo-collection__photo"
+            id="photo-1"
+          >
+          </div>
+
+          <div class="photo-collection__buttons">
+            <a href="#photo-1" class="photo-collection__button"></a>
+            <a href="#" class="photo-collection__button"></a>
+            <a href="#" class="photo-collection__button"></a>
+            <a href="#" class="photo-collection__button"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="subscription">
+      <h2 class="subscription__title">
+        Підписка
+      </h2>
+
+      <div class="subscription__text">
+        Бути в курсі всіх актуальних подій та останніх новин.
+      </div>
+
+      <form action="" class="subscription__form">
+        <input
+          type="email"
+          class="subscription__input"
+          placeholder="E-mail"
+        >
+
+        <button class="subscription__button"></button>
+      </form>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__logo-n-socials">
+          <div class="footer__logo">
+            Na
+            <br>
+            mu
+          </div>
+
+          <div class="footer__socials">
+            <img
+              src="images/socials__fb.png"
+              alt="facebook"
+            >
+
+            <img
+              src="images/socials__ig.png"
+              alt="instagram"
+            >
+          </div>
+        </div>
+
+        <div class="footer__schedule-n-contacts">
+          <div class="footer__schedule-info">
+            Графік роботи
+            <br>
+            <br>
+            <span class="footer__schedule-time">12:00 — 20:00</span> середа<br>
+            <span class="footer__schedule-time">12:00 — 20:00</span> четвер<br>
+            <span class="footer__schedule-time">12:00 — 20:00</span> п’ятниця<br>
+            <span class="footer__schedule-time">11:00 — 19:00</span> субота<br>
+            <span class="footer__schedule-time">11:00 — 19:00</span> неділя<br>
+            <br>
+            Вихідні понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+
+          <div class="footer__contacts-info">
+            Контакти:
+            <br>
+            <br>
+            вул. М. Грушевського, 6; Київ, 01001
+            <br>
+            тел. +38 (044) 278-13-57
+            <br>
+            факс +38 (044) 278-74-54
+            <br>
+            e-mail: info@namu.kiev.ua
+          </div>
+
+          <a href="#" class="footer__button-up">
+            &uarr;
+          </a>
+        </div>
+
+        <div class="nav footer__nav">
+          <div class="nav__container">
+            <a href="#gallery" class="nav__link">
+              Галерея
+              <br>
+              <br>
+            </a>
+            <a href="#current-events" class="nav__link">
+              Виставка та події
+              <br>
+              <br>
+            </a>
+          </div>
+
+          <div class="nav__container">
+            <a href="#" class="nav__link">
+              Про нас
+              <br>
+              <br>
+            </a>
+            <a href="#" class="nav__link">
+              Контакти
+              <br>
+              <br>
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__rights">
+          Copyright © 2019. All Rights Reserved.
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
