--- a/src/index.html
+++ b/src/index.html
@@ -143,14 +143,53 @@
             class="lecture__photo"
           >
 
-          <div class="lecture__info">
-            <div class="lecture__info-top">
-              <div class="lecture__type">Лекція</div>
-              <div class="lecture__time">26/08/2019 - 11:00</div>
+          <div class="container lecture__container">
+            <div class="lecture__info">
+              <div class="lecture__info-top">
+                <div class="lecture__type">Лекція</div>
+                <div class="lecture__time">26/08/2019 - 11:00</div>
+              </div>
+              <h3 class="lecture__name">
+                Від класицизму до романтизму
+              </h3>
             </div>
-            <h3 class="lecture__name">
-              Від класицизму до романтизму
-            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section">
+        <div class="container container--without-padding submit">
+          <div class="container">
+            <div class="grid grid--tablet">
+              <div class="grid__item grid__item--tablet-2-5 grid__item--desktop-4-9">
+                <h3 class="submit__title">Підписка</h3>
+
+                <span class="submit__description">
+                  Бути в курсі всіх актуальних подій та останніх новин.
+                </span>
+
+                <form
+                  action="./"
+                  method="get"
+                  class="submit__button button"
+                >
+                  <input
+                    name="email"
+                    placeholder="E-mail"
+                    type="email"
+                    class="submit__button-field button__field"
+                    required
+                  >
+
+                  <button
+                    class="submit__button-icon button__icon"
+                    id="submitingForm"
+                  >
+                    <img src="./images/black-arrow.svg" alt="Підписатися на новини">
+                  </button>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </section>
